[package]
name = "blissify"
version = "0.3.10"
authors = ["Polochon-street <polochonstreet@gmx.fr>"]
edition = "2021"
license = "GPL-3.0-only"
description = "An MPD plugin for creating smart playlists"
repository = "https://github.com/Polochon-street/blissify-rs"
keywords = ["audio", "song", "similarity", "playlist"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bliss-audio/library"]
# Build for raspberry pis
rpi = ["bliss-audio/rpi"]

[dependencies]
bliss-audio = { "git"="https://github.com/SimonTeixidor/bliss-rs.git", branch="multi-track-playlist-source" }
mpd = "0.0.12"
dirs = "3.0.1"
tempdir = "0.3.7"
clap = "2.33.3"
anyhow = "1.0.58"
log = "0.4.14"
env_logger = "0.8.4"
indicatif = "0.16.2"
noisy_float = "0.2.0"
termion = "1.5.6"
serde = "1.0"
pretty_assertions = "1.2.1"
extended-isolation-forest = "0.2.3"
