[package]
name = "blissify"
version = "0.5.2"
authors = ["Polochon-street <polochonstreet@gmx.fr>"]
edition = "2021"
license = "GPL-3.0-only"
description = "An MPD plugin for creating smart playlists"
repository = "https://github.com/Polochon-street/blissify-rs"
keywords = ["audio", "song", "similarity", "playlist"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bliss-audio/library"]
# Build for raspberry pis
rpi = ["bliss-audio/rpi"]
# Make `cargo test` also run the integration tests. You need to have
# MPD installed for it to work, and it will launch its own instance of
# MPD.
integration-tests = ["bliss-audio/integration-tests"]

[dependencies]
bliss-audio = "0.9.3"
mpd = "0.1.0"
dirs = "3.0.1"
tempdir = "0.3.7"
clap = { version = "2.33.3", features = ["wrap_help"] }
anyhow = "1.0.58"
log = "0.4.14"
env_logger = "0.8.4"
indicatif = "0.16.2"
noisy_float = "0.2.0"
termion = "1.5.6"
serde = "1.0"
pretty_assertions = "1.2.1"
extended-isolation-forest = { version = "0.2.3", default-features = false }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
